Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-17886

QML Reformat - signal and comments

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 4.3.0-rc1
    • Qt Creator 4.2.1, Qt Creator 4.3.0-beta1
    • Quick / QML Support
    • None
    • Ubuntu 15.04
      x86_64

      Try to reformat (Tools->QML/JS->Reformat File) the following test file:

      import QtQuick 2.5
      
      Item {
          // Comment
          signal test
      }
      

      The result observed (with/without signal parameters or with multi-line comment) is:

      import QtQuick 2.5
      
      Item {
          signal // Comment
          test
      }
      

      The comments are always between the string "signal" and the signal name.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mabenell Marco Benelli
            julien-deramond Julien Deramond
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes