src/libs/qmljs/qmljsreformatter.cpp
@@ -150,8 +150,12 @@ protected:
     void outCommentText(const QString &str)
     {
         QStringList lines = str.split(QLatin1Char('\n'));
+        bool multiline = lines.length() > 1;
         for (int i = 0; i < lines.size(); ++i) {
-            _line = lines.at(i);  // multiline comments don't keep track of previos lines
+            if (multiline)
+                _line = lines.at(i);  // multiline comments don't keep track of previos lines
+            else
+                _line += lines.at(i);
             if (i != lines.size() - 1)
                 newLine();
         }
@@ -582,7 +586,7 @@ protected:
                 out(ast->identifierToken);
             }
         } else { // signal
-            out("signal ");
+            out("signal ", ast->identifierToken);
             out(ast->identifierToken);
             if (ast->parameters) {
                 out("(");
